refactor: update assertions in ProductCategory and ProductEntity tests for clarity and consistency